--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gulp": "^3.9.1",
     "gulp-inject": "^4.1.0",
     "gulp-load-plugins": "^1.4.0",
-    "gulp-nodemon": "^2.2.1"
+    "gulp-nodemon": "^2.2.1",
+    "webpack": "^1.14.0"
   }
 }
