--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start":"gulp",
+    "start": "gulp",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,6 +20,7 @@
     "gulp-inject": "^4.1.0",
     "gulp-load-plugins": "^1.4.0",
     "gulp-nodemon": "^2.2.1",
+    "harp": "^0.23.0",
     "webpack": "^1.14.0"
   }
 }
